# formal2021_p1

./: .gitignore  Automaton.cpp  Automaton.h  CMakeLists.txt  Edge.h  README.md  main.cpp  solve.h
tests/: MainTest.cpp  manual_tests.cpp
